[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource(1)

[node name="TopBar" type="ColorRect" parent="."]
color = Color(0, 0, 0, 0.6)
size = Vector2(1280, 52)

[node name="TimeLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
text = "Time: 0.0"
position = Vector2(16, 12)

[node name="CoinLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
text = "Coins: 0"
position = Vector2(220, 12)

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
text = ""
position = Vector2(380, 300)
scale = Vector2(1.4, 1.4)

[node name="HintLabel" type="Label" parent="."]
unique_name_in_owner = true
text = "Use A/D to move, Space to jump, R to retry"
position = Vector2(380, 340)
